// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing naming style for constant with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for constant (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 16,
        "line": 1,
      },
      "start": {
        "character": 11,
        "line": 1,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for constant with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 16,
            "line": 1,
          },
          "start": {
            "character": 11,
            "line": 1,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for constant with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for constant (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 16,
        "line": 1,
      },
      "start": {
        "character": 11,
        "line": 1,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for constant with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 16,
            "line": 1,
          },
          "start": {
            "character": 11,
            "line": 1,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for generic with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for generic (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for generic with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 30,
            "line": 9,
          },
          "start": {
            "character": 25,
            "line": 9,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for generic with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for generic (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for generic with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 30,
            "line": 9,
          },
          "start": {
            "character": 25,
            "line": 9,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for instantiationLabel with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for instantiation label (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 7,
        "line": 4,
      },
      "start": {
        "character": 2,
        "line": 4,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for instantiationLabel with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": undefined,
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for instantiationLabel with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for instantiation label (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 7,
        "line": 4,
      },
      "start": {
        "character": 2,
        "line": 4,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for instantiationLabel with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": undefined,
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for parameterIn with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for input parameter (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterIn with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for parameterIn with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for input parameter (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterIn with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for parameterInout with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for inout parameter (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterInout with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for parameterInout with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for inout parameter (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterInout with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for parameterOut with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for output parameter (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterOut with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for parameterOut with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for output parameter (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for parameterOut with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for portIn with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for input port (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portIn with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for portIn with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for input port (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portIn with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for portInout with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for inout port (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portInout with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for portInout with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for inout port (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portInout with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for portOut with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for output port (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portOut with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for portOut with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for output port (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for portOut with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 9,
            "line": 2,
          },
          "start": {
            "character": 4,
            "line": 2,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for signal with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for signal (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 14,
        "line": 3,
      },
      "start": {
        "character": 9,
        "line": 3,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for signal with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 14,
            "line": 3,
          },
          "start": {
            "character": 9,
            "line": 3,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for signal with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for signal (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 14,
        "line": 3,
      },
      "start": {
        "character": 9,
        "line": 3,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for signal with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 14,
            "line": 3,
          },
          "start": {
            "character": 9,
            "line": 3,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for unused with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "Not writing signal 'apple' (unused)",
    "range": {
      "end": {
        "character": 14,
        "line": 3,
      },
      "start": {
        "character": 9,
        "line": 3,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for unused with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 14,
            "line": 3,
          },
          "start": {
            "character": 9,
            "line": 3,
          },
        },
      },
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 30,
            "line": 7,
          },
          "start": {
            "character": 25,
            "line": 7,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for unused with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "Not writing signal 'apple' (unused)",
    "range": {
      "end": {
        "character": 14,
        "line": 3,
      },
      "start": {
        "character": 9,
        "line": 3,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for unused with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 14,
            "line": 3,
          },
          "start": {
            "character": 9,
            "line": 3,
          },
        },
      },
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 30,
            "line": 7,
          },
          "start": {
            "character": 25,
            "line": 7,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;

exports[`testing naming style for variable with prefix "" and suffix "_suf" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for variable (name_suf) (naming-style)",
    "range": {
      "end": {
        "character": 16,
        "line": 1,
      },
      "start": {
        "character": 11,
        "line": 1,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for variable with prefix "" and suffix "_suf" 2`] = `
[
  {
    "edit": [
      {
        "newText": "apple_suf",
        "range": {
          "end": {
            "character": 16,
            "line": 1,
          },
          "start": {
            "character": 11,
            "line": 1,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'apple_suf'",
  },
]
`;

exports[`testing naming style for variable with prefix "pre_" and suffix "" 1`] = `
[
  {
    "code": "0;1",
    "message": "apple does not match the style settings for variable (pre_name) (naming-style)",
    "range": {
      "end": {
        "character": 16,
        "line": 1,
      },
      "start": {
        "character": 11,
        "line": 1,
      },
    },
    "severity": 2,
  },
]
`;

exports[`testing naming style for variable with prefix "pre_" and suffix "" 2`] = `
[
  {
    "edit": [
      {
        "newText": "pre_apple",
        "range": {
          "end": {
            "character": 16,
            "line": 1,
          },
          "start": {
            "character": 11,
            "line": 1,
          },
        },
      },
    ],
    "kind": "quickfix",
    "title": "Replace with 'pre_apple'",
  },
]
`;
